--- a/account/airbnb-for-work.html
+++ b/account/airbnb-for-work.html
@@ -1031,7 +1031,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -1056,7 +1056,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
@@ -1097,7 +1097,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -1122,7 +1122,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
@@ -1278,7 +1278,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -1303,7 +1303,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
