--- a/account/login-security.html
+++ b/account/login-security.html
@@ -2880,7 +2880,7 @@
                                         Choose a language
                                       </span>
                                       <span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                       >
                                         <svg
                                           viewBox="0 0 16 16"
@@ -2916,7 +2916,7 @@
                                         Choose a currency
                                       </span>
                                       <span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                       >
                                         <span class="font-semibold">₱</span>
                                       </span>
@@ -2985,7 +2985,7 @@
                                         Choose a language
                                       </span>
                                       <span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                       >
                                         <svg
                                           viewBox="0 0 16 16"
@@ -3021,7 +3021,7 @@
                                         Choose a currency
                                       </span>
                                       <span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                       >
                                         <span class="font-semibold">₱</span>
                                       </span>
@@ -3224,7 +3224,7 @@
                                         Choose a language
                                       </span>
                                       <span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                       >
                                         <svg
                                           viewBox="0 0 16 16"
@@ -3260,7 +3260,7 @@
                                         Choose a currency
                                       </span>
                                       <span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                       >
                                         <span class="font-semibold">₱</span>
                                       </span>
