--- a/account/preferences.html
+++ b/account/preferences.html
@@ -3539,7 +3539,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -3564,7 +3564,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
@@ -3605,7 +3605,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -3630,7 +3630,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
@@ -3786,7 +3786,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -3811,7 +3811,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
