--- a/account/profile.html
+++ b/account/profile.html
@@ -1346,7 +1346,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                 class="flex-items-center"
                                                 id="review-section-title"
                                               >
-                                                <div class="page-shell-mobile__lang-icon-wrapper">
+                                                <div class="mr-2">
                                                   <svg
                                                     viewBox="0 0 32 32"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -2449,7 +2449,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                           class="flex-items-center"
                                           id="review-section-title"
                                         >
-                                          <div class="page-shell-mobile__lang-icon-wrapper">
+                                          <div class="mr-2">
                                             <svg
                                               viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg"
@@ -2741,7 +2741,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -2766,7 +2766,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
@@ -2807,7 +2807,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -2832,7 +2832,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
@@ -2988,7 +2988,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -3013,7 +3013,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
