--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -3094,7 +3094,7 @@
                                           <div class="hidden">
                                             <div class="_13oxp5dz">
                                               <div class="flex-items-center">
-                                                <div class="page-shell-mobile__lang-icon-wrapper">
+                                                <div class="mr-2">
                                                   <svg
                                                     viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -3124,7 +3124,7 @@
                                           <div class="hidden">
                                             <div class="_13oxp5dz">
                                               <div class="flex-items-center">
-                                                <div class="page-shell-mobile__lang-icon-wrapper">
+                                                <div class="mr-2">
                                                   <svg
                                                     viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -3149,7 +3149,7 @@
                                             </div>
                                             <div class="_13oxp5dz">
                                               <div class="flex-items-center">
-                                                <div class="page-shell-mobile__lang-icon-wrapper">
+                                                <div class="mr-2">
                                                   <svg
                                                     viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -3173,7 +3173,7 @@
                                             </div>
                                             <div class="_13oxp5dz">
                                               <div class="flex-items-center">
-                                                <div class="page-shell-mobile__lang-icon-wrapper">
+                                                <div class="mr-2">
                                                   <svg
                                                     viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -6468,7 +6468,7 @@
                                         <div class="hidden">
                                           <div class="_13oxp5dz">
                                             <div class="flex-items-center">
-                                              <div class="page-shell-mobile__lang-icon-wrapper">
+                                              <div class="mr-2">
                                                 <svg
                                                   viewBox="0 0 16 16"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -6496,7 +6496,7 @@
                                         <div class="hidden">
                                           <div class="_13oxp5dz">
                                             <div class="flex-items-center">
-                                              <div class="page-shell-mobile__lang-icon-wrapper">
+                                              <div class="mr-2">
                                                 <svg
                                                   viewBox="0 0 16 16"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -6521,7 +6521,7 @@
                                           </div>
                                           <div class="_13oxp5dz">
                                             <div class="flex-items-center">
-                                              <div class="page-shell-mobile__lang-icon-wrapper">
+                                              <div class="mr-2">
                                                 <svg
                                                   viewBox="0 0 16 16"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -6545,7 +6545,7 @@
                                           </div>
                                           <div class="_13oxp5dz">
                                             <div class="flex-items-center">
-                                              <div class="page-shell-mobile__lang-icon-wrapper">
+                                              <div class="mr-2">
                                                 <svg
                                                   viewBox="0 0 16 16"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -6902,7 +6902,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -6927,7 +6927,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
@@ -6968,7 +6968,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -6993,7 +6993,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
@@ -7149,7 +7149,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -7174,7 +7174,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
