--- a/help/all-topics.html
+++ b/help/all-topics.html
@@ -2233,7 +2233,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -2262,7 +2262,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text"
                                     >PHP</span
@@ -2314,7 +2314,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -2343,7 +2343,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text"
                                     >PHP</span
@@ -2508,7 +2508,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -2537,7 +2537,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text"
                                     >PHP</span
