--- a/help/help.html
+++ b/help/help.html
@@ -5978,7 +5978,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -6001,7 +6001,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
@@ -6041,7 +6041,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -6064,7 +6064,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
@@ -6211,7 +6211,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -6234,7 +6234,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
