--- a/help/host-liability-insurance.html
+++ b/help/host-liability-insurance.html
@@ -748,7 +748,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -777,7 +777,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text"
                                     >PHP</span
@@ -829,7 +829,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -858,7 +858,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text"
                                     >PHP</span
@@ -1023,7 +1023,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -1052,7 +1052,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text"
                                     >PHP</span
