--- a/help/ticket-selection.html
+++ b/help/ticket-selection.html
@@ -1019,7 +1019,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -1048,7 +1048,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text"
                                     >PHP</span
@@ -1100,7 +1100,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -1129,7 +1129,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text"
                                     >PHP</span
@@ -1294,7 +1294,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -1323,7 +1323,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text"
                                     >PHP</span
