--- a/landing-pages/accessibility.html
+++ b/landing-pages/accessibility.html
@@ -1016,7 +1016,7 @@
                         <span class="page-shell-mobile__lang-wrapper"><button type="button"
                             class="page-shell-mobile__lang-btn">
                             <span class="text-highlight dir dir-ltr">Choose a language</span><span
-                              class="page-shell-mobile__lang-icon-wrapper"><svg viewBox="0 0 16 16"
+                              class="mr-2"><svg viewBox="0 0 16 16"
                                 xmlns="http://www.w3.org/2000/svg" style="
                                             display: block;
                                             height: 16px;
@@ -1030,7 +1030,7 @@
                           </button></span><span class="page-shell-mobile__lang-wrapper"><button type="button"
                             class="page-shell-mobile__lang-btn">
                             <span class="text-highlight dir dir-ltr">Choose a currency</span><span
-                              class="page-shell-mobile__lang-icon-wrapper"><span
+                              class="mr-2"><span
                                 class="font-semibold">₱</span></span><span
                               class="page-shell-mobile__lang-text">PHP</span>
                           </button></span>
@@ -1058,7 +1058,7 @@
                         <span class="page-shell-mobile__lang-wrapper"><button type="button"
                             class="page-shell-mobile__lang-btn">
                             <span class="text-highlight dir dir-ltr">Choose a language</span><span
-                              class="page-shell-mobile__lang-icon-wrapper"><svg viewBox="0 0 16 16"
+                              class="mr-2"><svg viewBox="0 0 16 16"
                                 xmlns="http://www.w3.org/2000/svg" style="
                                             display: block;
                                             height: 16px;
@@ -1072,7 +1072,7 @@
                           </button></span><span class="page-shell-mobile__lang-wrapper"><button type="button"
                             class="page-shell-mobile__lang-btn">
                             <span class="text-highlight dir dir-ltr">Choose a currency</span><span
-                              class="page-shell-mobile__lang-icon-wrapper"><span
+                              class="mr-2"><span
                                 class="font-semibold">₱</span></span><span
                               class="page-shell-mobile__lang-text">PHP</span>
                           </button></span>
@@ -1163,7 +1163,7 @@
                         <span class="page-shell-mobile__lang-wrapper"><button type="button"
                             class="page-shell-mobile__lang-btn">
                             <span class="text-highlight dir dir-ltr">Choose a language</span><span
-                              class="page-shell-mobile__lang-icon-wrapper"><svg viewBox="0 0 16 16"
+                              class="mr-2"><svg viewBox="0 0 16 16"
                                 xmlns="http://www.w3.org/2000/svg" style="
                                             display: block;
                                             height: 16px;
@@ -1177,7 +1177,7 @@
                           </button></span><span class="page-shell-mobile__lang-wrapper"><button type="button"
                             class="page-shell-mobile__lang-btn">
                             <span class="text-highlight dir dir-ltr">Choose a currency</span><span
-                              class="page-shell-mobile__lang-icon-wrapper"><span
+                              class="mr-2"><span
                                 class="font-semibold">₱</span></span><span
                               class="page-shell-mobile__lang-text">PHP</span>
                           </button></span>
