--- a/landing-pages/covidsafety.html
+++ b/landing-pages/covidsafety.html
@@ -2172,7 +2172,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -2195,7 +2195,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
@@ -2235,7 +2235,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -2258,7 +2258,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
@@ -2405,7 +2405,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -2428,7 +2428,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
