--- a/landing-pages/onlinehost.html
+++ b/landing-pages/onlinehost.html
@@ -2655,7 +2655,7 @@
                     ><button type="button" class="page-shell-mobile__lang-btn">
                       <span class="text-highlight dir dir-ltr"
                         >Choose a language</span
-                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                      ><span class="mr-2"
                         ><svg
                           viewBox="0 0 16 16"
                           xmlns="http://www.w3.org/2000/svg"
@@ -2680,7 +2680,7 @@
                     ><button type="button" class="page-shell-mobile__lang-btn">
                       <span class="text-highlight dir dir-ltr"
                         >Choose a currency</span
-                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                      ><span class="mr-2"
                         ><span class="font-semibold">₱</span></span
                       ><span class="page-shell-mobile__lang-text">PHP</span>
                     </button></span
@@ -2716,7 +2716,7 @@
                     ><button type="button" class="page-shell-mobile__lang-btn">
                       <span class="text-highlight dir dir-ltr"
                         >Choose a language</span
-                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                      ><span class="mr-2"
                         ><svg
                           viewBox="0 0 16 16"
                           xmlns="http://www.w3.org/2000/svg"
@@ -2741,7 +2741,7 @@
                     ><button type="button" class="page-shell-mobile__lang-btn">
                       <span class="text-highlight dir dir-ltr"
                         >Choose a currency</span
-                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                      ><span class="mr-2"
                         ><span class="font-semibold">₱</span></span
                       ><span class="page-shell-mobile__lang-text">PHP</span>
                     </button></span
@@ -2879,7 +2879,7 @@
                     ><button type="button" class="page-shell-mobile__lang-btn">
                       <span class="text-highlight dir dir-ltr"
                         >Choose a language</span
-                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                      ><span class="mr-2"
                         ><svg
                           viewBox="0 0 16 16"
                           xmlns="http://www.w3.org/2000/svg"
@@ -2904,7 +2904,7 @@
                     ><button type="button" class="page-shell-mobile__lang-btn">
                       <span class="text-highlight dir dir-ltr"
                         >Choose a currency</span
-                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                      ><span class="mr-2"
                         ><span class="font-semibold">₱</span></span
                       ><span class="page-shell-mobile__lang-text">PHP</span>
                     </button></span
