--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -2844,7 +2844,7 @@ Harlem, New York City"
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -2873,7 +2873,7 @@ Harlem, New York City"
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text"
                                     >PHP</span
@@ -2925,7 +2925,7 @@ Harlem, New York City"
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -2954,7 +2954,7 @@ Harlem, New York City"
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text"
                                     >PHP</span
@@ -3119,7 +3119,7 @@ Harlem, New York City"
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -3148,7 +3148,7 @@ Harlem, New York City"
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text"
                                     >PHP</span
