--- a/listings-product/gift.html
+++ b/listings-product/gift.html
@@ -797,7 +797,7 @@
                                   ><button type="button" class="page-shell-mobile__lang-btn">
                                     <span class="text-highlight dir dir-ltr"
                                       >Choose a language</span
-                                    ><span class="page-shell-mobile__lang-icon-wrapper"
+                                    ><span class="mr-2"
                                       ><svg
                                         viewBox="0 0 16 16"
                                         xmlns="http://www.w3.org/2000/svg"
@@ -820,7 +820,7 @@
                                   ><button type="button" class="page-shell-mobile__lang-btn">
                                     <span class="text-highlight dir dir-ltr"
                                       >Choose a currency</span
-                                    ><span class="page-shell-mobile__lang-icon-wrapper"
+                                    ><span class="mr-2"
                                       ><span class="font-semibold">₱</span></span
                                     ><span class="page-shell-mobile__lang-text">PHP</span>
                                   </button></span
@@ -861,7 +861,7 @@
                                   ><button type="button" class="page-shell-mobile__lang-btn">
                                     <span class="text-highlight dir dir-ltr"
                                       >Choose a language</span
-                                    ><span class="page-shell-mobile__lang-icon-wrapper"
+                                    ><span class="mr-2"
                                       ><svg
                                         viewBox="0 0 16 16"
                                         xmlns="http://www.w3.org/2000/svg"
@@ -884,7 +884,7 @@
                                   ><button type="button" class="page-shell-mobile__lang-btn">
                                     <span class="text-highlight dir dir-ltr"
                                       >Choose a currency</span
-                                    ><span class="page-shell-mobile__lang-icon-wrapper"
+                                    ><span class="mr-2"
                                       ><span class="font-semibold">₱</span></span
                                     ><span class="page-shell-mobile__lang-text">PHP</span>
                                   </button></span
@@ -1032,7 +1032,7 @@
                                   ><button type="button" class="page-shell-mobile__lang-btn">
                                     <span class="text-highlight dir dir-ltr"
                                       >Choose a language</span
-                                    ><span class="page-shell-mobile__lang-icon-wrapper"
+                                    ><span class="mr-2"
                                       ><svg
                                         viewBox="0 0 16 16"
                                         xmlns="http://www.w3.org/2000/svg"
@@ -1055,7 +1055,7 @@
                                   ><button type="button" class="page-shell-mobile__lang-btn">
                                     <span class="text-highlight dir dir-ltr"
                                       >Choose a currency</span
-                                    ><span class="page-shell-mobile__lang-icon-wrapper"
+                                    ><span class="mr-2"
                                       ><span class="font-semibold">₱</span></span
                                     ><span class="page-shell-mobile__lang-text">PHP</span>
                                   </button></span
