--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -17170,7 +17170,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -17195,7 +17195,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
@@ -17236,7 +17236,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -17261,7 +17261,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
@@ -17417,7 +17417,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -17442,7 +17442,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
