--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -5994,7 +5994,7 @@
                                           <span class="page-shell-mobile__lang-wrapper"><button type="button"
                                               class="page-shell-mobile__lang-btn">
                                               <span class="text-highlight dir dir-ltr">Choose a language</span><span
-                                                class="page-shell-mobile__lang-icon-wrapper"><svg viewBox="0 0 16 16"
+                                                class="mr-2"><svg viewBox="0 0 16 16"
                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                   role="presentation" focusable="false" style="
                                                       display: block;
@@ -6010,7 +6010,7 @@
                                             </button></span><span class="page-shell-mobile__lang-wrapper"><button
                                               type="button" class="page-shell-mobile__lang-btn">
                                               <span class="text-highlight dir dir-ltr">Choose a currency</span><span
-                                                class="page-shell-mobile__lang-icon-wrapper"><span
+                                                class="mr-2"><span
                                                   class="font-semibold">₱</span></span><span
                                                 class="page-shell-mobile__lang-text">PHP</span>
                                             </button></span>
@@ -6039,7 +6039,7 @@
                                           <span class="page-shell-mobile__lang-wrapper"><button type="button"
                                               class="page-shell-mobile__lang-btn">
                                               <span class="text-highlight dir dir-ltr">Choose a language</span><span
-                                                class="page-shell-mobile__lang-icon-wrapper"><svg viewBox="0 0 16 16"
+                                                class="mr-2"><svg viewBox="0 0 16 16"
                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                   role="presentation" focusable="false" style="
                                                       display: block;
@@ -6055,7 +6055,7 @@
                                             </button></span><span class="page-shell-mobile__lang-wrapper"><button
                                               type="button" class="page-shell-mobile__lang-btn">
                                               <span class="text-highlight dir dir-ltr">Choose a currency</span><span
-                                                class="page-shell-mobile__lang-icon-wrapper"><span
+                                                class="mr-2"><span
                                                   class="font-semibold">₱</span></span><span
                                                 class="page-shell-mobile__lang-text">PHP</span>
                                             </button></span>
@@ -6151,7 +6151,7 @@
                                           <span class="page-shell-mobile__lang-wrapper"><button type="button"
                                               class="page-shell-mobile__lang-btn">
                                               <span class="text-highlight dir dir-ltr">Choose a language</span><span
-                                                class="page-shell-mobile__lang-icon-wrapper"><svg viewBox="0 0 16 16"
+                                                class="mr-2"><svg viewBox="0 0 16 16"
                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                   role="presentation" focusable="false" style="
                                                       display: block;
@@ -6167,7 +6167,7 @@
                                             </button></span><span class="page-shell-mobile__lang-wrapper"><button
                                               type="button" class="page-shell-mobile__lang-btn">
                                               <span class="text-highlight dir dir-ltr">Choose a currency</span><span
-                                                class="page-shell-mobile__lang-icon-wrapper"><span
+                                                class="mr-2"><span
                                                   class="font-semibold">₱</span></span><span
                                                 class="page-shell-mobile__lang-text">PHP</span>
                                             </button></span>
@@ -6793,7 +6793,7 @@
                                                       <div class="_c2acbp">
                                                         <button type="button" class="app-theme__save-btn">
                                                           <div class="flex-items-center">
-                                                            <span class="page-shell-mobile__lang-icon-wrapper"><svg
+                                                            <span class="mr-2"><svg
                                                                 viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                                 aria-hidden="true" role="presentation" focusable="false"
                                                                 style="
@@ -6821,7 +6821,7 @@
                                                           data-testid="pdp-save-button-unsaved" type="button"
                                                           class="app-theme__save-btn">
                                                           <div aria-hidden="true" class="flex-items-center">
-                                                            <span class="page-shell-mobile__lang-icon-wrapper"><svg
+                                                            <span class="mr-2"><svg
                                                                 viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                                 aria-hidden="true" role="presentation" focusable="false"
                                                                 style="
@@ -15761,7 +15761,7 @@
                                         <span class="page-shell-mobile__lang-wrapper"><button type="button"
                                             class="page-shell-mobile__lang-btn">
                                             <span class="text-highlight dir dir-ltr">Choose a language</span><span
-                                              class="page-shell-mobile__lang-icon-wrapper"><svg viewBox="0 0 16 16"
+                                              class="mr-2"><svg viewBox="0 0 16 16"
                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                 role="presentation" focusable="false" style="
                                                     display: block;
@@ -15777,7 +15777,7 @@
                                           </button></span><span class="page-shell-mobile__lang-wrapper"><button
                                             type="button" class="page-shell-mobile__lang-btn">
                                             <span class="text-highlight dir dir-ltr">Choose a currency</span><span
-                                              class="page-shell-mobile__lang-icon-wrapper"><span
+                                              class="mr-2"><span
                                                 class="font-semibold">₱</span></span><span
                                               class="page-shell-mobile__lang-text">PHP</span>
                                           </button></span>
@@ -15806,7 +15806,7 @@
                                         <span class="page-shell-mobile__lang-wrapper"><button type="button"
                                             class="page-shell-mobile__lang-btn">
                                             <span class="text-highlight dir dir-ltr">Choose a language</span><span
-                                              class="page-shell-mobile__lang-icon-wrapper"><svg viewBox="0 0 16 16"
+                                              class="mr-2"><svg viewBox="0 0 16 16"
                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                 role="presentation" focusable="false" style="
                                                     display: block;
@@ -15822,7 +15822,7 @@
                                           </button></span><span class="page-shell-mobile__lang-wrapper"><button
                                             type="button" class="page-shell-mobile__lang-btn">
                                             <span class="text-highlight dir dir-ltr">Choose a currency</span><span
-                                              class="page-shell-mobile__lang-icon-wrapper"><span
+                                              class="mr-2"><span
                                                 class="font-semibold">₱</span></span><span
                                               class="page-shell-mobile__lang-text">PHP</span>
                                           </button></span>
@@ -15918,7 +15918,7 @@
                                         <span class="page-shell-mobile__lang-wrapper"><button type="button"
                                             class="page-shell-mobile__lang-btn">
                                             <span class="text-highlight dir dir-ltr">Choose a language</span><span
-                                              class="page-shell-mobile__lang-icon-wrapper"><svg viewBox="0 0 16 16"
+                                              class="mr-2"><svg viewBox="0 0 16 16"
                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                 role="presentation" focusable="false" style="
                                                     display: block;
@@ -15934,7 +15934,7 @@
                                           </button></span><span class="page-shell-mobile__lang-wrapper"><button
                                             type="button" class="page-shell-mobile__lang-btn">
                                             <span class="text-highlight dir dir-ltr">Choose a currency</span><span
-                                              class="page-shell-mobile__lang-icon-wrapper"><span
+                                              class="mr-2"><span
                                                 class="font-semibold">₱</span></span><span
                                               class="page-shell-mobile__lang-text">PHP</span>
                                           </button></span>
