--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -7376,7 +7376,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a language</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><svg
                                                     viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -7408,7 +7408,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><span class="font-semibold"
                                                     >₱</span
                                                   ></span
@@ -7478,7 +7478,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a language</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><svg
                                                     viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -7510,7 +7510,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><span class="font-semibold"
                                                     >₱</span
                                                   ></span
@@ -7703,7 +7703,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a language</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><svg
                                                     viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -7735,7 +7735,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><span class="font-semibold"
                                                     >₱</span
                                                   ></span
