--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -6599,7 +6599,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a language</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><svg
                                                     viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -6631,7 +6631,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><span
                                                     class="font-semibold"
                                                     >₱</span
@@ -6702,7 +6702,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a language</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><svg
                                                     viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -6734,7 +6734,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><span
                                                     class="font-semibold"
                                                     >₱</span
@@ -6928,7 +6928,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a language</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><svg
                                                     viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -6960,7 +6960,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><span
                                                     class="font-semibold"
                                                     >₱</span
@@ -8043,7 +8043,7 @@
                                                               class="flex-items-center"
                                                             >
                                                               <span
-                                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                                class="mr-2"
                                                                 ><svg
                                                                   viewBox="0 0 32 32"
                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -8089,7 +8089,7 @@
                                                               class="flex-items-center"
                                                             >
                                                               <span
-                                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                                class="mr-2"
                                                                 ><svg
                                                                   viewBox="0 0 32 32"
                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -19084,7 +19084,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a language</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><svg
                                                   viewBox="0 0 16 16"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -19116,7 +19116,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a currency</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><span
                                                   class="font-semibold"
                                                   >₱</span
@@ -19186,7 +19186,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a language</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><svg
                                                   viewBox="0 0 16 16"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -19218,7 +19218,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a currency</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><span
                                                   class="font-semibold"
                                                   >₱</span
@@ -19409,7 +19409,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a language</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><svg
                                                   viewBox="0 0 16 16"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -19441,7 +19441,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a currency</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><span
                                                   class="font-semibold"
                                                   >₱</span
