--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -4403,7 +4403,7 @@
                                             <span class="page-shell-mobile__lang-wrapper"><button type="button"
                                                 class="page-shell-mobile__lang-btn">
                                                 <span class="text-highlight dir dir-ltr">Choose a language</span><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"><svg viewBox="0 0 16 16"
+                                                  class="mr-2"><svg viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                                     focusable="false" style="
                                                                       display: block;
@@ -4418,7 +4418,7 @@
                                               </button></span><span class="page-shell-mobile__lang-wrapper"><button type="button"
                                                 class="page-shell-mobile__lang-btn">
                                                 <span class="text-highlight dir dir-ltr">Choose a currency</span><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"><span
+                                                  class="mr-2"><span
                                                     class="font-semibold">₱</span></span><span
                                                   class="page-shell-mobile__lang-text">PHP</span>
                                               </button></span>
@@ -4446,7 +4446,7 @@
                                             <span class="page-shell-mobile__lang-wrapper"><button type="button"
                                                 class="page-shell-mobile__lang-btn">
                                                 <span class="text-highlight dir dir-ltr">Choose a language</span><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"><svg viewBox="0 0 16 16"
+                                                  class="mr-2"><svg viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                                     focusable="false" style="
                                                                       display: block;
@@ -4461,7 +4461,7 @@
                                               </button></span><span class="page-shell-mobile__lang-wrapper"><button type="button"
                                                 class="page-shell-mobile__lang-btn">
                                                 <span class="text-highlight dir dir-ltr">Choose a currency</span><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"><span
+                                                  class="mr-2"><span
                                                     class="font-semibold">₱</span></span><span
                                                   class="page-shell-mobile__lang-text">PHP</span>
                                               </button></span>
@@ -4552,7 +4552,7 @@
                                             <span class="page-shell-mobile__lang-wrapper"><button type="button"
                                                 class="page-shell-mobile__lang-btn">
                                                 <span class="text-highlight dir dir-ltr">Choose a language</span><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"><svg viewBox="0 0 16 16"
+                                                  class="mr-2"><svg viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                                     focusable="false" style="
                                                                       display: block;
@@ -4567,7 +4567,7 @@
                                               </button></span><span class="page-shell-mobile__lang-wrapper"><button type="button"
                                                 class="page-shell-mobile__lang-btn">
                                                 <span class="text-highlight dir dir-ltr">Choose a currency</span><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"><span
+                                                  class="mr-2"><span
                                                     class="font-semibold">₱</span></span><span
                                                   class="page-shell-mobile__lang-text">PHP</span>
                                               </button></span>
@@ -5776,7 +5776,7 @@
                                                               class="flex-items-center"
                                                             >
                                                               <span
-                                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                                class="mr-2"
                                                                 ><svg
                                                                   viewBox="0 0 32 32"
                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -5822,7 +5822,7 @@
                                                               class="flex-items-center"
                                                             >
                                                               <span
-                                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                                class="mr-2"
                                                                 ><svg
                                                                   viewBox="0 0 32 32"
                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -19271,7 +19271,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a language</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><svg
                                                   viewBox="0 0 16 16"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -19303,7 +19303,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a currency</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><span class="font-semibold"
                                                   >₱</span
                                                 ></span
@@ -19372,7 +19372,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a language</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><svg
                                                   viewBox="0 0 16 16"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -19404,7 +19404,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a currency</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><span class="font-semibold"
                                                   >₱</span
                                                 ></span
@@ -19594,7 +19594,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a language</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><svg
                                                   viewBox="0 0 16 16"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -19626,7 +19626,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a currency</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><span class="font-semibold"
                                                   >₱</span
                                                 ></span
