--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -1552,7 +1552,7 @@
                                         Choose a language
                                       </span>
                                       <span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                       >
                                         <svg
                                           viewBox="0 0 16 16"
@@ -1588,7 +1588,7 @@
                                         Choose a currency
                                       </span>
                                       <span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                       >
                                         <span class="font-semibold">₱</span>
                                       </span>
@@ -1657,7 +1657,7 @@
                                         Choose a language
                                       </span>
                                       <span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                       >
                                         <svg
                                           viewBox="0 0 16 16"
@@ -1693,7 +1693,7 @@
                                         Choose a currency
                                       </span>
                                       <span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                       >
                                         <span class="font-semibold">₱</span>
                                       </span>
@@ -1896,7 +1896,7 @@
                                         Choose a language
                                       </span>
                                       <span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                       >
                                         <svg
                                           viewBox="0 0 16 16"
@@ -1932,7 +1932,7 @@
                                         Choose a currency
                                       </span>
                                       <span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                       >
                                         <span class="font-semibold">₱</span>
                                       </span>
