--- a/loaders/dashboard-loader.html
+++ b/loaders/dashboard-loader.html
@@ -648,7 +648,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -671,7 +671,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
@@ -709,7 +709,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -732,7 +732,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
@@ -879,7 +879,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -902,7 +902,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
