--- a/loaders/help-loader.html
+++ b/loaders/help-loader.html
@@ -622,7 +622,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -645,7 +645,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
@@ -685,7 +685,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -708,7 +708,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
@@ -855,7 +855,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -878,7 +878,7 @@
                                 ><button type="button" class="page-shell-mobile__lang-btn">
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
-                                  ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
