--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -1559,7 +1559,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a language</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><svg
                                                     viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -1591,7 +1591,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><span
                                                     class="font-semibold"
                                                     >₱</span
@@ -1662,7 +1662,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a language</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><svg
                                                     viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -1694,7 +1694,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><span
                                                     class="font-semibold"
                                                     >₱</span
@@ -1888,7 +1888,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a language</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><svg
                                                     viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg"
@@ -1920,7 +1920,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                   ><span
                                                     class="font-semibold"
                                                     >₱</span
@@ -4492,7 +4492,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a language</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><svg
                                                   viewBox="0 0 16 16"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -4524,7 +4524,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a currency</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><span
                                                   class="font-semibold"
                                                   >₱</span
@@ -4594,7 +4594,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a language</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><svg
                                                   viewBox="0 0 16 16"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -4626,7 +4626,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a currency</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><span
                                                   class="font-semibold"
                                                   >₱</span
@@ -4817,7 +4817,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a language</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><svg
                                                   viewBox="0 0 16 16"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -4849,7 +4849,7 @@
                                                 class="text-highlight dir dir-ltr"
                                                 >Choose a currency</span
                                               ><span
-                                                class="page-shell-mobile__lang-icon-wrapper"
+                                                class="mr-2"
                                                 ><span
                                                   class="font-semibold"
                                                   >₱</span
