--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -384,7 +384,7 @@
                                         role="button"
                                         aria-expanded="true"
                                         class="_1hqm3ym0"
-                                        ><div class="page-shell-mobile__lang-icon-wrapper">
+                                        ><div class="mr-2">
                                           <svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -415,7 +415,7 @@
                                         role="button"
                                         aria-expanded="true"
                                         class="_12izjrf"
-                                        ><div class="page-shell-mobile__lang-icon-wrapper">
+                                        ><div class="mr-2">
                                           <svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -451,7 +451,7 @@
                                           role="button"
                                           aria-expanded="true"
                                           class="_12izjrf"
-                                          ><div class="page-shell-mobile__lang-icon-wrapper">
+                                          ><div class="mr-2">
                                             <svg
                                               viewBox="0 0 16 16"
                                               xmlns="http://www.w3.org/2000/svg"
