--- a/online-experience/dashboard.html
+++ b/online-experience/dashboard.html
@@ -1009,7 +1009,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1032,7 +1032,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
@@ -1070,7 +1070,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1093,7 +1093,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
@@ -1240,7 +1240,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1263,7 +1263,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
