--- a/online-experience/insights.html
+++ b/online-experience/insights.html
@@ -3352,7 +3352,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -3375,7 +3375,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
@@ -3413,7 +3413,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -3436,7 +3436,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
@@ -3588,7 +3588,7 @@
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
                                 >
-                                <span class="page-shell-mobile__lang-icon-wrapper"
+                                <span class="mr-2"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -3614,7 +3614,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><span class="font-semibold">₱</span></span
                                 >
                                 <span class="page-shell-mobile__lang-text">PHP</span>
