--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -1702,7 +1702,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -1732,7 +1732,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                         ><span
                                           class="font-semibold"
                                           >₱</span
@@ -1791,7 +1791,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -1821,7 +1821,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                         ><span
                                           class="font-semibold"
                                           >₱</span
@@ -1998,7 +1998,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -2028,7 +2028,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                         ><span
                                           class="font-semibold"
                                           >₱</span
