--- a/payments/payment.html
+++ b/payments/payment.html
@@ -2694,7 +2694,7 @@
                                                     Choose a language
                                                   </span>
                                                   <span
-                                                    class="page-shell-mobile__lang-icon-wrapper"
+                                                    class="mr-2"
                                                   >
                                                     <svg
                                                       viewBox="0 0 16 16"
@@ -2734,7 +2734,7 @@
                                                     Choose a currency
                                                   </span>
                                                   <span
-                                                    class="page-shell-mobile__lang-icon-wrapper"
+                                                    class="mr-2"
                                                   >
                                                     <span class="font-semibold">
                                                       ₱
@@ -2824,7 +2824,7 @@
                                                     Choose a language
                                                   </span>
                                                   <span
-                                                    class="page-shell-mobile__lang-icon-wrapper"
+                                                    class="mr-2"
                                                   >
                                                     <svg
                                                       viewBox="0 0 16 16"
@@ -2864,7 +2864,7 @@
                                                     Choose a currency
                                                   </span>
                                                   <span
-                                                    class="page-shell-mobile__lang-icon-wrapper"
+                                                    class="mr-2"
                                                   >
                                                     <span class="font-semibold">
                                                       ₱
@@ -3095,7 +3095,7 @@
                                                     Choose a language
                                                   </span>
                                                   <span
-                                                    class="page-shell-mobile__lang-icon-wrapper"
+                                                    class="mr-2"
                                                   >
                                                     <svg
                                                       viewBox="0 0 16 16"
@@ -3135,7 +3135,7 @@
                                                     Choose a currency
                                                   </span>
                                                   <span
-                                                    class="page-shell-mobile__lang-icon-wrapper"
+                                                    class="mr-2"
                                                   >
                                                     <span class="font-semibold">
                                                       ₱
@@ -6678,7 +6678,7 @@
                                                   Choose a language
                                                 </span>
                                                 <span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                 >
                                                   <svg
                                                     viewBox="0 0 16 16"
@@ -6718,7 +6718,7 @@
                                                   Choose a currency
                                                 </span>
                                                 <span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                 >
                                                   <span class="font-semibold">
                                                     ₱
@@ -6806,7 +6806,7 @@
                                                   Choose a language
                                                 </span>
                                                 <span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                 >
                                                   <svg
                                                     viewBox="0 0 16 16"
@@ -6846,7 +6846,7 @@
                                                   Choose a currency
                                                 </span>
                                                 <span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                 >
                                                   <span class="font-semibold">
                                                     ₱
@@ -7075,7 +7075,7 @@
                                                   Choose a language
                                                 </span>
                                                 <span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                 >
                                                   <svg
                                                     viewBox="0 0 16 16"
@@ -7115,7 +7115,7 @@
                                                   Choose a currency
                                                 </span>
                                                 <span
-                                                  class="page-shell-mobile__lang-icon-wrapper"
+                                                  class="mr-2"
                                                 >
                                                   <span class="font-semibold">
                                                     ₱
