--- a/payments/service-fee.html
+++ b/payments/service-fee.html
@@ -1239,7 +1239,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -1269,7 +1269,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                         ><span class="font-semibold"
                                           >₱</span
                                         ></span
@@ -1327,7 +1327,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -1357,7 +1357,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                         ><span class="font-semibold"
                                           >₱</span
                                         ></span
@@ -1533,7 +1533,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -1563,7 +1563,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span
-                                        class="page-shell-mobile__lang-icon-wrapper"
+                                        class="mr-2"
                                         ><span class="font-semibold"
                                           >₱</span
                                         ></span
