--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -1331,7 +1331,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -1356,7 +1356,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
@@ -1397,7 +1397,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -1422,7 +1422,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
@@ -1578,7 +1578,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -1603,7 +1603,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
