--- a/resource-center/article.html
+++ b/resource-center/article.html
@@ -1818,7 +1818,7 @@
                                     Choose a language
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <svg
                                       viewBox="0 0 16 16"
@@ -1852,7 +1852,7 @@
                                     Choose a currency
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <span class="font-semibold">₱</span>
                                   </span>
@@ -1915,7 +1915,7 @@
                                     Choose a language
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <svg
                                       viewBox="0 0 16 16"
@@ -1949,7 +1949,7 @@
                                     Choose a currency
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <span class="font-semibold">₱</span>
                                   </span>
@@ -2140,7 +2140,7 @@
                                     Choose a language
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <svg
                                       viewBox="0 0 16 16"
@@ -2174,7 +2174,7 @@
                                     Choose a currency
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <span class="font-semibold">₱</span>
                                   </span>
