--- a/resource-center/resources.html
+++ b/resource-center/resources.html
@@ -4006,7 +4006,7 @@
                                   <span class="text-highlight dir dir-ltr">
                                     Choose a language
                                   </span>
-                                  <span class="page-shell-mobile__lang-icon-wrapper">
+                                  <span class="mr-2">
                                     <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" style="
                                         display: block;
                                         height: 16px;
@@ -4026,7 +4026,7 @@
                                   <span class="text-highlight dir dir-ltr">
                                     Choose a currency
                                   </span>
-                                  <span class="page-shell-mobile__lang-icon-wrapper">
+                                  <span class="mr-2">
                                     <span class="font-semibold">₱</span>
                                   </span>
                                   <span class="page-shell-mobile__lang-text">
@@ -4072,7 +4072,7 @@
                                   <span class="text-highlight dir dir-ltr">
                                     Choose a language
                                   </span>
-                                  <span class="page-shell-mobile__lang-icon-wrapper">
+                                  <span class="mr-2">
                                     <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" style="
                                         display: block;
                                         height: 16px;
@@ -4092,7 +4092,7 @@
                                   <span class="text-highlight dir dir-ltr">
                                     Choose a currency
                                   </span>
-                                  <span class="page-shell-mobile__lang-icon-wrapper">
+                                  <span class="mr-2">
                                     <span class="font-semibold">₱</span>
                                   </span>
                                   <span class="page-shell-mobile__lang-text">
@@ -4209,7 +4209,7 @@
                                   <span class="text-highlight dir dir-ltr">
                                     Choose a language
                                   </span>
-                                  <span class="page-shell-mobile__lang-icon-wrapper">
+                                  <span class="mr-2">
                                     <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" style="
                                         display: block;
                                         height: 16px;
@@ -4229,7 +4229,7 @@
                                   <span class="text-highlight dir dir-ltr">
                                     Choose a currency
                                   </span>
-                                  <span class="page-shell-mobile__lang-icon-wrapper">
+                                  <span class="mr-2">
                                     <span class="font-semibold">₱</span>
                                   </span>
                                   <span class="page-shell-mobile__lang-text">
