--- a/resource-center/topic.html
+++ b/resource-center/topic.html
@@ -1884,7 +1884,7 @@
                                     Choose a language
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <svg
                                       viewBox="0 0 16 16"
@@ -1918,7 +1918,7 @@
                                     Choose a currency
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <span class="font-semibold">₱</span>
                                   </span>
@@ -1981,7 +1981,7 @@
                                     Choose a language
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <svg
                                       viewBox="0 0 16 16"
@@ -2015,7 +2015,7 @@
                                     Choose a currency
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <span class="font-semibold">₱</span>
                                   </span>
@@ -2206,7 +2206,7 @@
                                     Choose a language
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <svg
                                       viewBox="0 0 16 16"
@@ -2240,7 +2240,7 @@
                                     Choose a currency
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <span class="font-semibold">₱</span>
                                   </span>
