--- a/resource-center/video.html
+++ b/resource-center/video.html
@@ -1656,7 +1656,7 @@
                                     Choose a language
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <svg
                                       viewBox="0 0 16 16"
@@ -1690,7 +1690,7 @@
                                     Choose a currency
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <span class="font-semibold">₱</span>
                                   </span>
@@ -1753,7 +1753,7 @@
                                     Choose a language
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <svg
                                       viewBox="0 0 16 16"
@@ -1787,7 +1787,7 @@
                                     Choose a currency
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <span class="font-semibold">₱</span>
                                   </span>
@@ -1978,7 +1978,7 @@
                                     Choose a language
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <svg
                                       viewBox="0 0 16 16"
@@ -2012,7 +2012,7 @@
                                     Choose a currency
                                   </span>
                                   <span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                   >
                                     <span class="font-semibold">₱</span>
                                   </span>
