--- a/edit/photos.html
+++ b/edit/photos.html
@@ -2979,7 +2979,7 @@
                                     Manage all the photos you’ve uploaded.
                                   </div>
                                   <div class="_z8r60f" style="position: relative">
-                                    <div class="page-shell-mobile__lang-icon-wrapper">
+                                    <div class="mr-2">
                                       <div class="img-middle" role="img" aria-busy="false"
                                         aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Nw==" style="
                                             display: inline-block;
@@ -3020,7 +3020,7 @@
                                             "></div>
                                       </div>
                                     </div>
-                                    <div class="page-shell-mobile__lang-icon-wrapper">
+                                    <div class="mr-2">
                                       <div class="img-middle" role="img" aria-busy="false"
                                         aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Ng==" style="
                                             display: inline-block;
@@ -3061,7 +3061,7 @@
                                             "></div>
                                       </div>
                                     </div>
-                                    <div class="page-shell-mobile__lang-icon-wrapper">
+                                    <div class="mr-2">
                                       <div class="img-middle" role="img" aria-busy="false"
                                         aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2Mw==" style="
                                             display: inline-block;
@@ -3102,7 +3102,7 @@
                                             "></div>
                                       </div>
                                     </div>
-                                    <div class="page-shell-mobile__lang-icon-wrapper">
+                                    <div class="mr-2">
                                       <div class="img-middle" role="img" aria-busy="false"
                                         aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2NA==" style="
                                             display: inline-block;
@@ -3143,7 +3143,7 @@
                                             "></div>
                                       </div>
                                     </div>
-                                    <div class="page-shell-mobile__lang-icon-wrapper">
+                                    <div class="mr-2">
                                       <div class="img-middle" role="img" aria-busy="false"
                                         aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc3OQ==" style="
                                             display: inline-block;
@@ -3184,7 +3184,7 @@
                                             "></div>
                                       </div>
                                     </div>
-                                    <div class="page-shell-mobile__lang-icon-wrapper">
+                                    <div class="mr-2">
                                       <div class="img-middle" role="img" aria-busy="false"
                                         aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Mw==" style="
                                             display: inline-block;
@@ -3225,7 +3225,7 @@
                                             "></div>
                                       </div>
                                     </div>
-                                    <div class="page-shell-mobile__lang-icon-wrapper">
+                                    <div class="mr-2">
                                       <div class="img-middle" role="img" aria-busy="false"
                                         aria-label="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1NA==" style="
                                             display: inline-block;
