--- a/help/searching-and-booking.html
+++ b/help/searching-and-booking.html
@@ -656,7 +656,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -685,7 +685,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text"
                                     >PHP</span
@@ -737,7 +737,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -766,7 +766,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text"
                                     >PHP</span
@@ -931,7 +931,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><svg
                                       viewBox="0 0 16 16"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -960,7 +960,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span
-                                    class="page-shell-mobile__lang-icon-wrapper"
+                                    class="mr-2"
                                     ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text"
                                     >PHP</span
