--- a/landing-pages/host-protection-insurance.html
+++ b/landing-pages/host-protection-insurance.html
@@ -1416,7 +1416,7 @@
                     ><button type="button" class="page-shell-mobile__lang-btn">
                       <span class="text-highlight dir dir-ltr"
                         >Choose a language</span
-                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                      ><span class="mr-2"
                         ><svg
                           viewBox="0 0 16 16"
                           xmlns="http://www.w3.org/2000/svg"
@@ -1441,7 +1441,7 @@
                     ><button type="button" class="page-shell-mobile__lang-btn">
                       <span class="text-highlight dir dir-ltr"
                         >Choose a currency</span
-                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                      ><span class="mr-2"
                         ><span class="font-semibold">₱</span></span
                       ><span class="page-shell-mobile__lang-text">PHP</span>
                     </button></span
@@ -1477,7 +1477,7 @@
                     ><button type="button" class="page-shell-mobile__lang-btn">
                       <span class="text-highlight dir dir-ltr"
                         >Choose a language</span
-                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                      ><span class="mr-2"
                         ><svg
                           viewBox="0 0 16 16"
                           xmlns="http://www.w3.org/2000/svg"
@@ -1502,7 +1502,7 @@
                     ><button type="button" class="page-shell-mobile__lang-btn">
                       <span class="text-highlight dir dir-ltr"
                         >Choose a currency</span
-                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                      ><span class="mr-2"
                         ><span class="font-semibold">₱</span></span
                       ><span class="page-shell-mobile__lang-text">PHP</span>
                     </button></span
@@ -1640,7 +1640,7 @@
                     ><button type="button" class="page-shell-mobile__lang-btn">
                       <span class="text-highlight dir dir-ltr"
                         >Choose a language</span
-                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                      ><span class="mr-2"
                         ><svg
                           viewBox="0 0 16 16"
                           xmlns="http://www.w3.org/2000/svg"
@@ -1665,7 +1665,7 @@
                     ><button type="button" class="page-shell-mobile__lang-btn">
                       <span class="text-highlight dir dir-ltr"
                         >Choose a currency</span
-                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                      ><span class="mr-2"
                         ><span class="font-semibold">₱</span></span
                       ><span class="page-shell-mobile__lang-text">PHP</span>
                     </button></span
