--- a/listings-product/wishlists.html
+++ b/listings-product/wishlists.html
@@ -1450,7 +1450,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -1475,7 +1475,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
@@ -1516,7 +1516,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -1541,7 +1541,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
@@ -1697,7 +1697,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a language</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -1722,7 +1722,7 @@
                                     ><button type="button" class="page-shell-mobile__lang-btn">
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
-                                      ><span class="page-shell-mobile__lang-icon-wrapper"
+                                      ><span class="mr-2"
                                         ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
