--- a/loaders/experiences-loader.html
+++ b/loaders/experiences-loader.html
@@ -438,7 +438,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -461,7 +461,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
@@ -499,7 +499,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -522,7 +522,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
@@ -669,7 +669,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -692,7 +692,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
