--- a/online-experience/experiences.html
+++ b/online-experience/experiences.html
@@ -1006,7 +1006,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1029,7 +1029,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
@@ -1067,7 +1067,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1090,7 +1090,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
@@ -1237,7 +1237,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1260,7 +1260,7 @@
                               ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                ><span class="mr-2"
                                   ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
